# proxy

./: DEPLOYMENT.md  RECOVERY.md  ecosystem.config.cjs
deploy/nginx/: daddyproxy.com.conf.example  openrelay.conf.example
my-app/: middleware.ts  next.config.ts  package-lock.json  package.json
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/sw.js/: route.ts
my-app/components/: BareUvBootstrap.tsx
my-app/components/home/: FaqSection.tsx  FeaturesSection.tsx  HeroSection.tsx  HomeInteractive.tsx  HowItWorksSection.tsx  ProxyInputBar.tsx  QuickLaunchShortcuts.tsx
my-app/components/layout/: Footer.tsx  Navbar.tsx
my-app/lib/: api.ts  bareEndpoint.ts  proxyBackend.ts  stripTrailingSlash.ts  ultraviolet.ts  uvCodec.ts
my-app/public/baremux/: bare-client.mjs  index.js  index.mjs
my-app/public/uv/: sw.js  uv.config.js
my-app/scripts/: copy-static-assets.mjs
rust-server/: .env.example  Cargo.toml  README.md  run-release.sh
rust-server/src/: app.rs  config.rs  error.rs  main.rs  state.rs
rust-server/src/bare/: headers.rs  manifest.rs  mod.rs
rust-server/src/bare/v2/: fetch.rs  mod.rs  websocket.rs
rust-server/src/bare/v3/: fetch.rs  mod.rs  websocket.rs
rust-server/src/proxy/: client.rs  mod.rs  probe.rs  retry.rs  socks.rs  tls.rs
server/: .env.development.example  .env.example  .env.production.example  ARCHITECTURE.md  README.md  package-lock.json  package.json
server/src/: app.js  index.js  loadEnv.js
server/src/config/: env.js
server/src/lib/: allowedOrigins.js  cookieJar.js  htmlRewrite.js  ipRoyal.js  proxyDiagnostics.js  (+10 more)
(+8 files in other folders)
