[package]
name = "openrelay-bare"
version = "0.1.0"
edition = "2021"
description = "TompHTTP Bare server with ProxySeller SOCKS5 upstream"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "catch-panic"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "socks",
    "gzip",
    "brotli",
    "deflate",
    "stream",
    "json",
] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
http = "1"
http-body-util = "0.1"
bytes = "1"
dashmap = "6"
parking_lot = "0.12"
rand = "0.8"
url = "2"
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
urlencoding = "2"
